fix: fix Calendar title wrapping/alignment, related to #269

--- a/components/calendar/index.css
+++ b/components/calendar/index.css
@@ -17,9 +17,11 @@ governing permissions and limitations under the License.
   --spectrum-calendar-border-width-reset: 0;
   --spectrum-calendar-margin-y: 24px;
   --spectrum-calendar-margin-x: 32px;
+  --spectrum-calendar-width: calc((var(--spectrum-calendar-day-width) + var(--spectrum-calendar-day-padding) * 2) * 7);
 }
 
 .spectrum-Calendar {
+  width: var(--spectrum-calendar-width);
   display: inline-block;
 }
 
@@ -29,9 +31,8 @@ governing permissions and limitations under the License.
 
 .spectrum-Calendar-header {
   display: flex;
-  box-sizing: border-box;
   width: 100%;
-  height: var(--spectrum-calendar-title-height);
+  align-items: center;
 }
 
 .spectrum-Calendar-title {
@@ -40,7 +41,6 @@ governing permissions and limitations under the License.
 
   line-height: var(--spectrum-calendar-title-height);
   margin: 0;
-  padding: 0 var(--spectrum-calendar-title-height);
   order: 1;
   flex-grow: 1;
 
